sealosbuild/kubewolf/manifests/aiproxy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: aiproxy
  labels:
    app: aiproxy
spec:
  replicas: 1
  selector:
    matchLabels:
      app: aiproxy
  template:
    metadata:
      labels:
        app: aiproxy
    spec:
      containers:
        - name: aiproxy
          image: registry.cn-hangzhou.aliyuncs.com/labring/aiproxy:latest
          ports:
            - containerPort: 3000
---
apiVersion: v1
kind: Service
metadata:
  name: aiproxy
spec:
  selector:
    app: aiproxy
  ports:
    - protocol: TCP
      port: 3000
      targetPort: 3000
  type: ClusterIP
